<resources>
    <string name="app_name">Chess for All</string>
    <string name="app_pgnFileManager">PGN-Filemanager</string>
    <string name="app_chessData">Game data</string>
    <string name="app_chessNotation">Notation</string>
    <string name="app_optionsGUI">Options - User settings</string>
    <string name="app_optionsPlay">Game mode</string>
    <string name="app_optionsEnginePlay">Engine Settings</string>
    <string name="app_optionsTimeControl">Options - Time control</string>
    <string name="app_editChessBoard">Edit chessboard</string>
    <string name="app_playEngineSettings">Automatic computer playing</string>
    <string name="comingSoon">Coming soon</string>
    <string name="pieces">KQRBN</string>
    <string name="sendEmail">Send email</string>
    <string name="btn_Ok">  OK  </string>
    <string name="btn_Yes">Yes</string>
    <string name="btn_No">No</string>
    <string name="btn_Pgn">PGN</string>
    <string name="btn_Move">Moves</string>
    <string name="btn_MoveText">+Text</string>
    <string name="inputDialog_chess960Id">Chess960-ID(0...959):</string>
    <string name="inputDialog_color">Select color:</string>
    <string name="inputDialog_castling">Castling value</string>
    <string name="inputDialog_enPassant">En passant value</string>
    <string name="inputDialog_draw50">Fifty-move rule</string>
    <string name="inputDialog_moveCounter">Move counter</string>
    <string name="cl_unknownPiece">Unknown piece</string>
    <string name="cl_wrongBasePosition">Wrong position</string>
    <string name="cl_resultWhite">1-0</string>
    <string name="cl_resultBlack">0-1</string>
    <string name="cl_resultDraw">1/2-1/2</string>
    <string name="cl_gameOver">Game over</string>
    <string name="cl_50MoveRule">50-move rule</string>
    <string name="cl_position3Times">3x position</string>
    <string name="cl_moveError">Move error</string>
    <string name="cl_moveWhite">White moves</string>
    <string name="cl_moveBlack">Black moves</string>
    <string name="cl_moveMultiple">Multiple moves possible</string>
    <string name="cl_moveNo">No move possible</string>
    <string name="cl_moveWrong">Invalid move</string>
    <string name="cl_mate">Mate</string>
    <string name="cl_stealmate">Stalemate</string>
    <string name="cl_check">Check!</string>
    <string name="cl_castlingError">Castling?</string>
    <string name="cl_castlingCheck">Invalid move or check</string>
    <string name="cl_emptyField">Empty field</string>
    <string name="cl_kingError">Only one king per color!</string>
    <string name="cl_fenError">FEN error</string>
    <string name="cl_notationError">PGN notation error</string>
    <string name="cl_variationError">Variation: unequal parentheses</string>
    <string name="cl_checkOponent">Opponent in check</string>
    <string name="player_move">Your move...</string>
    <string name="engine_openingBook">Opening book</string>
    <string name="engine_autoPlay">Automatic play</string>
    <string name="engine_paused">Computer paused!</string>
    <string name="engineProgressDialog">Connecting to engines...</string>
    <string name="engineNoEnginesOnDevice">No engines on device</string>
    <string name="engine_noRespond">Engine stopped</string>
    <string name="enginePlayerResign">Resign the current game</string>
    <string name="enginePlayerDraw">Draw offer</string>
    <string name="engineDeclinesDraw">The engine declines your draw offer</string>
    <string name="engineSearchMessage">No engine found.\nSearch for chess engines?</string>
    <string name="engineSearchNoInternetMessage">No internet connection!</string>
    <string name="engineAnalysisSearch">Analysis...</string>
    <string name="engineAnalysisStopWait">Analysis stopped... Please wait!</string>
    <string name="engineAnalysisStop">Analysis stopped!</string>
    <string name="engine_timeout">Engine stopped (timeout)</string>
    <string name="menu_new_game">New game</string>
    <string name="menu_edit_board">Edit board</string>
    <string name="menu_pgn">PGN file</string>
    <string name="menu_pgn_load">Load game</string>
    <string name="menu_pgn_save">Save game</string>
    <string name="menu_pgn_delete">Delete a PGN-File</string>
    <string name="menu_pgn_edit">PGN-Data</string>
    <string name="menu_modes">Play, edit, view</string>
    <string name="menu_modes_edit">Edit</string>
    <string name="menu_modes_view">Play</string>
    <string name="menu_play_options">Playing (options)</string>
    <string name="menu_enginesettings">Chess engine</string>
    <string name="menu_enginesettings_shutdown">Shutdown engines</string>
    <string name="menu_enginesettings_playOptions">Engine Settings</string>
    <string name="menu_usersettings">Settings</string>
    <string name="menu_usersettings_gui">UI options</string>
    <string name="menu_usersettings_timeControl">Time control</string>
    <string name="menu_usersettings_timerAutoPlay">Timer auto play</string>
    <string name="menu_usersettings_time_white">Time white</string>
    <string name="menu_usersettings_time_black">Time black</string>
    <string name="menu_specialities_engine_autoplay">Automatic play</string>
    <string name="menu_about">About</string>
    <string name="menu_about_new">What\'s new</string>
    <string name="menu_about_userManual">User manual</string>
    <string name="menu_about_website">Website</string>
    <string name="menu_about_sourcecode">Source code</string>
    <string name="menu_about_contact">Contact</string>
    <string name="menu_load_extern">SD-card</string>
    <string name="menu_load_intern">Assets</string>
    <string name="menu_load_www">Download PGN file</string>
    <string name="menu_load_game">Game</string>
    <string name="menu_load_game_first">First</string>
    <string name="menu_load_game_last">Last</string>
    <string name="menu_load_game_next">Next</string>
    <string name="menu_load_game_previous">Previous</string>
    <string name="menu_load_game_random">Random</string>
    <string name="menu_edit_fen_color">Color (w/b)</string>
    <string name="menu_edit_fen_castling">Castling</string>
    <string name="menu_edit_fen_ep">En passant</string>
    <string name="menu_edit_fen_draw50">Draw 50-move rule</string>
    <string name="menu_edit_fen_movecounter">Move counter</string>
    <string name="menu_edit_board_clear">Clear board</string>
    <string name="menu_edit_board_current">Current position</string>
    <string name="menu_edit_board_standard">Standard</string>
    <string name="menu_edit_board_chess960_manual">960 Manual</string>
    <string name="menu_edit_board_chess960_random">960 Random</string>
    <string name="menu_edit_board_chess960_number">960 Number</string>
    <string name="menu_info_turnBoard">Turn board</string>
    <string name="menu_info_nag">NAG (+, -, =, ...)</string>
    <string name="menu_info_moveNotification">Annotation to a move</string>
    <string name="menu_info_moveNotation">PGN-Notation</string>
    <string name="menu_info_clipboardCopyPgn">Copy game to clipboard</string>
    <string name="menu_info_clipboardCopyFen">Copy position to clipboard</string>
    <string name="menu_info_clipboardPaste">Paste from the clipboard</string>
    <string name="menu_query">Query - search for games</string>
    <string name="menu_query_gameId">Game-ID</string>
    <string name="menu_query_player">Player</string>
    <string name="menu_query_event">Event</string>
    <string name="menu_query_eco">ECO - Opening</string>
    <string name="peAutoSave">Auto save</string>
    <string name="peAutoFlipColor">Auto flip (color)</string>
    <string name="peAutoCurrentGame">Current game</string>
    <string name="peRound">Round</string>
    <string name="peGameCounter">Counter</string>
    <string name="fmLblPath">Path</string>
    <string name="fmLblFile">File</string>
    <string name="fmTitleLoad">PGN-Filemanager - Load Game</string>
    <string name="fmTitleSave">PGN-Filemanager - Save Game</string>
    <string name="fmTitleEngineAutoPlay">PGN-Filemanager - Automatic play</string>
    <string name="fmPathError">Path not exists!</string>
    <string name="fmFileError">File not exists or PGN-Error!</string>
    <string name="fmFileExists">File exists, overwrite?</string>
    <string name="fmFileNotEndsWithPgn">No PGN-File (.pgn)!</string>
    <string name="fmWebFileError">No Web-File (PGN) exists, URL: </string>
    <string name="fmPgnError">PGN-Filename error</string>
    <string name="fmDeleteFileQuestion">Delete</string>
    <string name="fmAddFolder">New folder</string>
    <string name="fmProgressDialog">Loading PGN-Data...\nPlease wait...</string>
    <string name="fmProgressQueryDialog">Database query...\nPlease wait...</string>
    <string name="fmCreatingPgnDatabase">Creating db:</string>
    <string name="fmCreatingPgnDatabaseToast">Database update... for more information see notifications</string>
    <string name="fmDropCreateIndex">drop/create index... please wait!</string>
    <string name="fmDatabaseLocked">database locked, process running</string>
    <string name="daTxtLblWhite">White</string>
    <string name="daTxtLblBlack">Black</string>
    <string name="dgTitleFileDialog">C4A - PGN-File-Dialog</string>
    <string name="dgTitleDialog">C4A - Dialog</string>
    <string name="guPlayerName">Player name</string>
    <string name="guStatusBar">Fullscreen mode</string>
    <string name="guLastPosition">Last position</string>
    <string name="guDisableScreenTimeout">Screen timeout</string>
    <string name="guUsePgnDatabase">PGN database</string>
    <string name="guEnableSounds">Sound effects</string>
    <string name="guDisplayCoordinates">Coordinates (a-h, 1-8)</string>
    <string name="epEngineMessage">Show calculations</string>
    <string name="epRandomFirstMove">Random first move (white)</string>
    <string name="epAutoStartEngine">Engine auto start</string>
    <string name="epOpeningBook">Polyglot opening book</string>
    <string name="epBookHint">book.bin</string>
    <string name="epMultiPv">Variants</string>
    <string name="epPvMoves">Moves</string>
    <string name="epStrength">Playing strength</string>
    <string name="play_fullScreen">Fullscreen mode</string>
    <string name="play_lastPosition">Last position</string>
    <string name="play_screenTimeout">Screen timeout</string>
    <string name="play_audio">Sound effects</string>
    <string name="play_coordinates">Coordinates</string>
    <string name="play_engineAutostart">Engine auto start</string>
    <string name="play_openingBook">Opening book</string>
    <string name="play_openingBookHints">Show book hints</string>
    <string name="play_thinking">Thinking</string>
    <string name="play_ponder">Ponder</string>
    <string name="play_moveList">Move list</string>
    <string name="play_white">Play White</string>
    <string name="play_black">Play Black</string>
    <string name="play_engine">Computer</string>
    <string name="play_analysis">Analysis</string>
    <string name="play_two_players">Edit</string>
    <string name="play_two_players_flip">Two Players</string>
    <string name="play_newGame">New game</string>
    <string name="menu_board_flip">Flip board</string>
    <string name="play_set_clock">Set clock</string>
    <string name="play_continue">Continue</string>
    <string name="guGameNavigationBoard">Game navigation (board)</string>
    <string name="menu_title">Menu</string>
    <string name="pause_delay">delay</string>
    <string name="pause_start">start</string>
    <string name="pieceNames">Piece Names</string>
    <string name="guBlindMode">Blindfold mode</string>
    <string name="play_blindMode">Blind mode</string>
    <string name="play_pgnDb">PGN-DB</string>
	<string name="chess960" translatable="false">Chess 960</string>
    <string name="play_quickMove">Quick move</string>
    <string name="position">Position</string>
    <string name="timePosition">Position</string>
</resources>