<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp"
     android:layout_marginTop="2dp"
     android:layout_marginBottom="2dp"
     android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/btn_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/btn_timeWhite"
            style="@style/c4aTV4"
            android:layout_height="wrap_content"
            android:background="@drawable/rectanglewhite"
            android:text="@string/menu_usersettings_time_white" />
        <TextView
            android:id="@+id/btn_timeBlack"
            style="@style/c4aTV4"
            android:layout_height="wrap_content"
            android:background="@drawable/rectanglewhite"
            android:text="@string/menu_usersettings_time_black" />
        <TextView
            android:id="@+id/btn_timeControl"
            style="@style/c4aTV4"
            android:layout_height="wrap_content"
            android:background="@drawable/rectanglewhite"
            android:text="@string/menu_usersettings_timeControl" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/autom_play"
        android:layout_below="@id/btn_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/btn_autom_play"
            style="@style/c4aTV4"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectanglewhite"
            android:text="@string/menu_specialities_engine_autoplay" />
        <TextView
            android:id="@+id/btn_delay"
            style="@style/c4aTV4"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectanglewhite"
            android:text="@string/pause_delay" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_h"
        android:layout_below="@id/autom_play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:weightSum="3"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/play_h1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="2"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/play_mode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/play_mode_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:layout_gravity="center"
                    android:textSize="@dimen/v_text_size"
                    android:textColor="@color/text_white"
                    android:layout_alignParentLeft="true"
                    android:text="@string/play_white" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/play"
                android:layout_below="@id/play_mode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/btn_newGame"
                    style="@style/c4aTV4"
                    android:layout_width="fill_parent"
                    android:background="@drawable/rectangleyellow"
                    android:layout_gravity="center"
                    android:text="@string/play_newGame" />
                <TextView
                    android:id="@+id/btn_setClock"
                    style="@style/c4aTV4"
                    android:layout_width="fill_parent"
                    android:background="@drawable/rectangleyellow"
                    android:layout_gravity="center"
                    android:text="@string/play_set_clock" />
                <TextView
                    android:id="@+id/btn_continue"
                    style="@style/c4aTV4"
                    android:layout_width="fill_parent"
                    android:background="@drawable/rectangleyellow"
                    android:layout_gravity="center"
                    android:text="@string/play_continue" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/play_h2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/init_pos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/btn_standard"
                    style="@style/c4aTV4"
                    android:background="@drawable/rectangleyellow"
                    android:text="@string/menu_edit_board_standard" />
                <TextView
                    android:id="@+id/btn_chess960"
                    style="@style/c4aTV4"
                    android:background="@drawable/rectangleyellow"
                    android:text="@string/chess960" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_play_b"
        android:layout_below="@id/play_h"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/btn_position"
            style="@style/c4aTV4"
            android:background="@drawable/rectangleyellow"
            android:text="@string/position" />

        <TextView
            android:id="@+id/btn_pause_ok"
            style="@style/c4aTV4"
            android:background="@drawable/rectangleyellow"
            android:text="@string/btn_Ok" />

    </LinearLayout>

</RelativeLayout>