<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background_c4a_2" >

<TextView
	android:id="@+id/title"
	style="@style/c4aTV2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_alignParentLeft="true"
	android:layout_alignParentTop="true"
	android:layout_marginBottom="@dimen/tv_color_margin_1"
	android:layout_marginLeft="0dip"
	android:paddingTop="0dip"
	android:paddingLeft="0dip"
	android:paddingRight="0dip"
	android:singleLine="true"
	android:gravity="center"
	android:background="@drawable/rectangletransparent"
	android:text="@string/app_optionsPlay"
	android:textColor="#000000" />

	<LinearLayout
		android:id="@+id/ntLl1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="120"
		android:layout_marginTop="@dimen/margin_1"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/ntBtnMove"
			style="@style/c4aTV5"
			android:layout_width="0dp"
			android:onClick="myClickHandler"
			android:background="@drawable/rectangleblue"
			android:layout_weight="30"
			android:text="@string/btn_Move" />
		<TextView
			android:id="@+id/ntBtnMoveText"
			style="@style/c4aTV5"
			android:layout_width="0dp"
			android:onClick="myClickHandler"
			android:background="@drawable/rectangleblue"
			android:layout_weight="30"
			android:text="@string/btn_MoveText" />
		<TextView
			android:id="@+id/ntBtnPgn"
			style="@style/c4aTV5"
			android:layout_width="0dp"
			android:onClick="myClickHandler"
			android:background="@drawable/rectangleblue"
			android:layout_weight="30"
			android:text="@string/btn_Pgn" />
		<TextView
			android:id="@+id/ntBtnOk"
			style="@style/c4aTV5"
			android:layout_width="0dp"
			android:onClick="myClickHandler"
			android:background="@drawable/rectanglegrey"
			android:layout_weight="30"
			android:text="@android:string/ok" />
	</LinearLayout>

<ScrollView
	android:fillViewport="true"
	android:layout_below="@id/title"
	android:layout_above="@id/ntLl1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"> 
	<TextView
		android:id="@+id/ntTv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textIsSelectable="true"
		android:typeface="sans"
		android:textStyle="bold"
		android:textSize="19dip"
		android:background="@color/notation_background"
		android:textColor="@color/text_dark" />
</ScrollView>

</RelativeLayout>
